--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 # CMake
 cmake-build-*/
 
+
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
 
@@ -43,6 +44,8 @@ cmake-build-*/
 
 # IntelliJ
 out/
+.idea/
+TheBegin.iml
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
